--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="quiz-section">
       <div id="quiz">
-        <h2 id="question" class="question">quiz</h2>
+        <h2 id="question" class="question">Quiz</h2>
         <hr />
         <ul>
           <!-- or use button option -->
@@ -18,16 +18,16 @@
             <label for="a" id="option_1">Quiz option</label>
           </li>
           <li>
-            <input type="radio" name="answer" class="answer" id="a" />
-            <label for="a" id="option_1">Quiz option</label>
+            <input type="radio" name="answer" class="answer" id="b" />
+            <label for="b" id="option_2">Quiz option</label>
           </li>
           <li>
-            <input type="radio" name="answer" class="answer" id="a" />
-            <label for="a" id="option_1">Quiz option</label>
+            <input type="radio" name="answer" class="answer" id="c" />
+            <label for="c" id="option_3">Quiz option</label>
           </li>
           <li>
-            <input type="radio" name="answer" class="answer" id="a" />
-            <label for="a" id="option_1">Quiz option</label>
+            <input type="radio" name="answer" class="answer" id="d" />
+            <label for="d" id="option_4">Quiz option</label>
           </li>
           
         </ul>
@@ -35,7 +35,7 @@
         <hr />
 
         <div class="btn">
-          <button type="submit" id="submit"></button>
+          <button type="submit" id="submit">Submit</button>
         </div>
       </div>
     </div>
