added functionality to load quiz question and options dynamically. Updated styling

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <input type="radio" name="answer" class="answer" id="b" />
             <label for="b" id="option_2">Quiz option</label>
           </li>
-          <li>
+          <!-- <li>
             <input type="radio" name="answer" class="answer" id="c" />
             <label for="c" id="option_3">Quiz option</label>
           </li>
           <li>
             <input type="radio" name="answer" class="answer" id="d" />
             <label for="d" id="option_4">Quiz option</label>
-          </li>
+          </li> -->
           
         </ul>
 
@@ -39,5 +39,6 @@
         </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
