updated label styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
+
   </head>
   <body>
     <div class="quiz-section">
@@ -15,20 +19,13 @@
           <!-- or use button option -->
           <li>
             <input type="radio" name="answer" class="answer" id="a" />
-            <label for="a" id="option_1">Quiz option</label>
+            <label tabindex="0" for="a" id="option_1">Quiz option</label>
           </li>
           <li>
             <input type="radio" name="answer" class="answer" id="b" />
-            <label for="b" id="option_2">Quiz option</label>
+            <label tabindex="0" for="b" id="option_2">Quiz option</label>
           </li>
-          <!-- <li>
-            <input type="radio" name="answer" class="answer" id="c" />
-            <label for="c" id="option_3">Quiz option</label>
-          </li>
-          <li>
-            <input type="radio" name="answer" class="answer" id="d" />
-            <label for="d" id="option_4">Quiz option</label>
-          </li> -->
+        
           
         </ul>
 
