--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="quiz-section">
       <div id="quiz">
-        <h2 id="question" class="question">Quiz</h2>
+        <h2 id="question" class="question">Which word/sentence is spelt correctly?</h2>
         <hr />
         <ul>
           <!-- or use button option -->
