updated game logic

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div class="quiz-section">
       <div id="quiz">
+        <h2 class="question-number question">Question number</h2>
         <h2 id="question" class="question">Which word/sentence is spelt correctly?</h2>
         <hr />
         <ul>
@@ -32,7 +33,7 @@
         <hr />
 
         <div class="btn">
-          <button type="submit" id="submit">Submit</button>
+          <button type="submit" id="submit" onClick="getNewQuestion">Submit</button>
         </div>
       </div>
     </div>
