cleared radio buttons on navigating to next question

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           <!-- or use button option -->
           <li>
             <input type="radio" name="answer" class="answer" id="a" />
-            <label tabindex="0" for="a" id="option_1">Quiz option</label>
+            <label tabindex="0" for="a" id="option_1" class="answer-label">Quiz option</label>
           </li>
           <li>
             <input type="radio" name="answer" class="answer" id="b" />
-            <label tabindex="0" for="b" id="option_2">Quiz option</label>
+            <label tabindex="0" for="b" id="option_2" class="answer-label">Quiz option</label>
           </li>
         
           
